correcion fecha,refactor nombre dtos limpieza poms y variables