@@ -1,8 +1,8 @@
 package com.microservice.test.application.usecase;
 
 import com.microservice.test.application.mapper.PriceToPriceResponseMapper;
-import com.microservice.test.domain.entity.FindPriceRequest;
-import com.microservice.test.domain.entity.FindPriceResponse;
+import com.microservice.test.domain.entity.PriceRequest;
+import com.microservice.test.domain.entity.PriceResponse;
 import com.microservice.test.domain.entity.Price;
 import com.microservice.test.domain.repository.PriceRepository;
 import org.jeasy.random.EasyRandom;
@@ -34,8 +34,6 @@ class FindPriceUseCaseImplTest {
     @Mock
     private PriceToPriceResponseMapper priceToPriceResponseMapper;
 
-
-
     EasyRandom easyRandom = new EasyRandom(getEasyRandomParameters());
 
     /**
@@ -46,19 +44,18 @@ class FindPriceUseCaseImplTest {
     @Test
     void given_not_exist_product_reference_return_null() {
 
-
         //GIVEN
-        FindPriceRequest findPriceRequest = easyRandom.nextObject(FindPriceRequest.class);
+        PriceRequest priceRequest = easyRandom.nextObject(PriceRequest.class);
 
         //MOCK
         when(this.priceRepository.findByFilter(ArgumentMatchers.any())).thenReturn(Collections.emptyList());
         when(this.priceToPriceResponseMapper.toPriceResponse(ArgumentMatchers.any())).thenReturn(null);
 
         //WHEN
-        FindPriceResponse result = findPriceUseCase.find(findPriceRequest);
+        PriceResponse result = findPriceUseCase.find(priceRequest);
 
         //THEN
-        assertEquals(result, null);
+        assertNull(result);
 
     }
 
@@ -70,21 +67,20 @@ class FindPriceUseCaseImplTest {
     @Test
     void given_exist_product_reference_return_price_response() {
 
-
         //GIVEN
-        FindPriceRequest findPriceRequest = easyRandom.nextObject(FindPriceRequest.class);
-        FindPriceResponse findPriceResponse = easyRandom.nextObject(FindPriceResponse.class);
+        PriceRequest priceRequest = easyRandom.nextObject(PriceRequest.class);
+        PriceResponse priceResponse = easyRandom.nextObject(PriceResponse.class);
         Price price = easyRandom.nextObject(Price.class);
 
         //MOCK
-        when(this.priceRepository.findByFilter(ArgumentMatchers.any())).thenReturn(Arrays.asList(price));
-        when(this.priceToPriceResponseMapper.toPriceResponse(ArgumentMatchers.any())).thenReturn(findPriceResponse);
+        when(this.priceRepository.findByFilter(ArgumentMatchers.any())).thenReturn(List.of(price));
+        when(this.priceToPriceResponseMapper.toPriceResponse(ArgumentMatchers.any())).thenReturn(priceResponse);
 
         //WHEN
-        FindPriceResponse result = findPriceUseCase.find(findPriceRequest);
+        PriceResponse result = findPriceUseCase.find(priceRequest);
 
         //THEN
-        assertEquals(result, findPriceResponse);
+        assertEquals(result, priceResponse);
 
     }
 
@@ -94,26 +90,24 @@ class FindPriceUseCaseImplTest {
      * then return the price response
      */
     @Test
-    void given_exist_two_product_reference_return_price_response() {
-
+    void given_exist_two_product_reference_return_priority_price_response() {
 
         //GIVEN
-        FindPriceRequest findPriceRequest = easyRandom.nextObject(FindPriceRequest.class);
-        FindPriceResponse findPriceResponse = easyRandom.nextObject(FindPriceResponse.class);
+        PriceRequest priceRequest = easyRandom.nextObject(PriceRequest.class);
+        PriceResponse priceResponse = easyRandom.nextObject(PriceResponse.class);
         List<Price> prices = easyRandom.objects(Price.class,2).collect(Collectors.toList());
 
         //MOCK
         when(this.priceRepository.findByFilter(ArgumentMatchers.any())).thenReturn(prices);
-        when(this.priceToPriceResponseMapper.toPriceResponse(ArgumentMatchers.any())).thenReturn(findPriceResponse);
+        when(this.priceToPriceResponseMapper.toPriceResponse(ArgumentMatchers.any())).thenReturn(priceResponse);
 
         //WHEN
-        FindPriceResponse result = findPriceUseCase.find(findPriceRequest);
+        PriceResponse result = findPriceUseCase.find(priceRequest);
 
         //THEN
-        assertEquals(result, findPriceResponse);
+        assertEquals(result, priceResponse);
 
     }
-
 
     private EasyRandomParameters getEasyRandomParameters() {
         EasyRandomParameters parameters = new EasyRandomParameters();
